Switch from useState to useReducer. Fix dark mode to go fullscreen.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
 .outer {
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 .dark {
